@@ -1,3 +1,5 @@
+2013-01-25: Encode title in data set filename if set.
+
 2013-01-22: Fix possible divide by zero error on certain data values.
 
 2013-01-22: Get rid of the colons in the time stamps used for file names (they
